--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/c9ce1a407a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id="root">
